--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -24,4 +24,5 @@
 </form>
 
 <p><a href="{% url 'accounts:delete_profile' %}">Удалить профиль</a></p>
+<a href="{% url 'accounts:logout' %}">Выйти</a>
 {% endblock %}
