--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,11 @@
                 <a class="nav-link" href="{% url 'posts:index' %}">Посты</a>
             </div>
             {% if user.is_authenticated %}
+
             <a class="nav-link" href="{% url 'accounts:profile' %}">Профиль ({{ user.username }})</a>
             <!-- Используем 'accounts', так как auth.urls под 'accounts/' -->
             {% else %}
-            <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
+            <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация|вход</a>
             <!-- Используем 'accounts', так как auth.urls под 'accounts/' -->
             {% endif %}
             {% if user.is_authenticated %}
